--- a/06-css-stuff/index.html
+++ b/06-css-stuff/index.html
@@ -5,13 +5,21 @@
 </head>
 <body>
     <div class="container">
-    <div class="display-test-inline">
-            I'm first element
-        </div>
-    
-        <div class="display-test-block">
-            I'm second element
-        </div>
+           <div class="display-test-inline">
+                I'm first element
+            </div>
+        
+            <div class="display-test-block">
+                I'm second element
+            </div>
+    </div>
+
+    <div class="relative-parent">
+            <div class="half-container">
+                    <div class="element">
+                         Hello Im element
+                     </div>
+            </div>
     </div>
 </body>
 
